	* configs/mcu123-lpc214x/composite and configs/mcu123-lpc214x/src/up_composite.c:
	  Add a configuration to test the USB composite device.
	* configs/stm3240g-eval/Telnetd:  Add a configuration for testing the
	  Telnet daemon.
	* configs/stm3240g-eval/nsh2:  This is another NSH configuration.  It differs
	  from the original nsh configuration because it does not have an RS-232
	  console (only a Telnet console) and SDIO is enabled.  This configuration is
	  required because the STM3240G-EVAL board cannot simultaneously support
	  RS-232 and SDIO due to pin conflicts.
	* lib/string/lib_strcasestr.c:  Add strcasestr().
	* lib/stdio/lib_avsprintf.c:  Add avsprintf().
	* lib/net/lib_inetntop.c:  Add inet_ntop().
	* lib/net/lib_inetpton.c:  Add inet_pton().
	* include/pthread.h:  Correct PTHREAD_MUTEX_INITIALIZER.
	* fs/fat/fs_fatfs.c:  Fix an error in the FAT statfs() implementation that
	  was causing some block counts to be reported incorrectly (reported by
	  David Sidrane).
	* drivers/ramlog.c:  Add a character driver that can substitute
	  for /dev/console and or be used for logging debug output when there
	  is no serial port available (such as when a Telnet console is used).
	* lib/stdio/lib_syslogstream:  Add a stream object that will be used to
	  re-direct all debug output to the RAM log if CONFIG_SYSLOG and
	  CONFIG_RAMLOG_SYSLOG are defined.
	* lib/misc/lib_dbg.c: Add an interface enabled with CONFIG_DEBUG_ENABLE that
	  can be used to turn debug output on and off.

6.16 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* drivers/sensors/qencoder.c and include/nuttx/sensors/qencoder.h:  Add an
	  implementation for a quadrature encoder upper half driver.
	* arch/arm/src/stm32/stm32_qencoder.c/.h:  Add a initial implementation of
	  a lower-half quadrature encoder driver for the STM32.  On initial check-in,
	  this is little more than a "skeleton" file.
	* Various files:  CAN ISO-11783 support contributed by Gary Teravskis.